--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@born3am/eslint-config",
-  "version": "0.1.0",
+  "version": "0.2.2",
   "description": "ESLint configuration for Born3am Projects",
   "main": "index.js",
   "type": "module",
@@ -12,59 +12,111 @@
     "url": "git+https://github.com/born3am/eslint-config.git"
   },
   "author": "Born3am Projects GmbH",
-  "peerDependencies": {
-    "@eslint/eslintrc": "3.0.2",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-promise": "6.1.1",
-    "globals": "14.0.0"
-  },
   "bugs": {
     "url": "https://github.com/born3am/eslint-config/issues"
   },
   "homepage": "https://github.com/born3am/eslint-config#readme",
+  "devDependencies": {
+    "@eslint/eslintrc": "3.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-deprecation": "2.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.34.0",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "eslint-plugin-typescript-sort-keys": "3.2.0",
+    "eslint-plugin-vitest": "0.3.22",
+    "globals": "14.0.0",
+    "typescript-eslint": "7.1.0"
+  },
+  "peerDependencies": {
+    "jest": ">=29.7.0",
+    "prettier": ">=3.2.5",
+    "typescript": ">=5.3.3",
+    "vite-plugin-eslint": ">=1.8.1",
+    "vitest": ">=1.2.2"
+  },
+  "license": "ISC",
   "dependencies": {
     "acorn": "^8.11.3",
     "acorn-jsx": "^5.3.2",
+    "acorn-walk": "^8.3.2",
     "ajv": "^6.12.6",
+    "ansi-escapes": "^4.3.2",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
     "argparse": "^2.0.1",
     "aria-query": "^5.3.0",
     "array-buffer-byte-length": "^1.0.1",
     "array-includes": "^3.1.7",
     "array-union": "^2.1.0",
     "array.prototype.filter": "^1.0.3",
+    "array.prototype.findlast": "^1.2.4",
     "array.prototype.findlastindex": "^1.2.4",
     "array.prototype.flat": "^1.3.2",
     "array.prototype.flatmap": "^1.3.2",
+    "array.prototype.toreversed": "^1.1.2",
     "array.prototype.tosorted": "^1.1.3",
     "arraybuffer.prototype.slice": "^1.0.3",
+    "assertion-error": "^1.1.0",
     "ast-types-flow": "^0.0.8",
     "asynciterator.prototype": "^1.0.0",
     "available-typed-arrays": "^1.0.7",
     "axe-core": "^4.7.0",
     "axobject-query": "^3.2.1",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-jest-hoist": "^29.6.3",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "babel-preset-jest": "^29.6.3",
     "balanced-match": "^1.0.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
+    "browserslist": "^4.23.0",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "cac": "^6.7.14",
     "call-bind": "^1.0.7",
     "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001593",
+    "chai": "^4.4.1",
     "chalk": "^4.1.2",
+    "char-regex": "^1.0.2",
+    "check-error": "^1.0.3",
+    "ci-info": "^3.9.0",
+    "cjs-module-lexer": "^1.2.3",
+    "cliui": "^8.0.1",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.2",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "concat-map": "^0.0.1",
+    "convert-source-map": "^2.0.0",
+    "create-jest": "^29.7.0",
     "cross-spawn": "^7.0.3",
     "damerau-levenshtein": "^1.0.8",
     "debug": "^4.3.4",
+    "dedent": "^1.5.1",
+    "deep-eql": "^4.1.3",
     "deep-is": "^0.1.4",
+    "deepmerge": "^4.3.1",
     "define-data-property": "^1.1.4",
     "define-properties": "^1.2.1",
     "dequal": "^2.0.3",
+    "detect-newline": "^3.1.0",
+    "diff-sequences": "^29.6.3",
     "dir-glob": "^3.0.1",
     "doctrine": "^3.0.0",
+    "electron-to-chromium": "^1.4.690",
+    "emittery": "^0.13.1",
     "emoji-regex": "^9.2.2",
+    "error-ex": "^1.3.2",
     "es-abstract": "^1.22.5",
     "es-array-method-boxes-properly": "^1.0.0",
     "es-define-property": "^1.0.0",
@@ -73,34 +125,30 @@
     "es-set-tostringtag": "^2.0.3",
     "es-shim-unscopables": "^1.0.2",
     "es-to-primitive": "^1.2.1",
+    "esbuild": "^0.19.12",
+    "escalade": "^3.1.2",
     "escape-string-regexp": "^4.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-module-utils": "^2.8.1",
-    "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-typescript-sort-keys": "^3.2.0",
-    "eslint-plugin-vitest": "^0.3.22",
     "eslint-scope": "^7.2.2",
     "eslint-visitor-keys": "^3.4.3",
     "espree": "^10.0.1",
+    "esprima": "^4.0.1",
     "esquery": "^1.5.0",
     "esrecurse": "^4.3.0",
     "estraverse": "^5.3.0",
+    "estree-walker": "^2.0.2",
     "esutils": "^2.0.3",
+    "execa": "^5.1.1",
+    "exit": "^0.1.2",
+    "expect": "^29.7.0",
     "fast-deep-equal": "^3.1.3",
     "fast-diff": "^1.3.0",
     "fast-glob": "^3.3.2",
     "fast-json-stable-stringify": "^2.1.0",
     "fast-levenshtein": "^2.0.6",
     "fastq": "^1.17.1",
+    "fb-watchman": "^2.0.2",
     "file-entry-cache": "^6.0.1",
     "fill-range": "^7.0.1",
     "find-up": "^5.0.0",
@@ -108,17 +156,23 @@
     "flatted": "^3.3.1",
     "for-each": "^0.3.3",
     "fs.realpath": "^1.0.0",
+    "fsevents": "^2.3.3",
     "function-bind": "^1.1.2",
     "function.prototype.name": "^1.1.6",
     "functions-have-names": "^1.2.3",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.2",
     "get-intrinsic": "^1.2.4",
+    "get-package-type": "^0.1.0",
+    "get-stream": "^6.0.1",
     "get-symbol-description": "^1.0.2",
     "glob": "^7.2.3",
     "glob-parent": "^6.0.2",
-    "globals": "^14.0.0",
     "globalthis": "^1.0.3",
     "globby": "^11.1.0",
     "gopd": "^1.0.1",
+    "graceful-fs": "^4.2.11",
     "graphemer": "^1.4.0",
     "has-bigints": "^1.0.2",
     "has-flag": "^4.0.0",
@@ -127,13 +181,17 @@
     "has-symbols": "^1.0.3",
     "has-tostringtag": "^1.0.2",
     "hasown": "^2.0.1",
+    "html-escaper": "^2.0.2",
+    "human-signals": "^2.1.0",
     "ignore": "^5.3.1",
     "import-fresh": "^3.3.0",
+    "import-local": "^3.1.0",
     "imurmurhash": "^0.1.4",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "internal-slot": "^1.0.7",
     "is-array-buffer": "^3.0.4",
+    "is-arrayish": "^0.2.1",
     "is-async-function": "^2.0.0",
     "is-bigint": "^1.0.4",
     "is-boolean-object": "^1.1.2",
@@ -142,6 +200,8 @@
     "is-date-object": "^1.0.5",
     "is-extglob": "^2.1.1",
     "is-finalizationregistry": "^1.0.2",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
     "is-generator-function": "^1.0.10",
     "is-glob": "^4.0.3",
     "is-map": "^2.0.2",
@@ -152,6 +212,7 @@
     "is-regex": "^1.1.4",
     "is-set": "^2.0.2",
     "is-shared-array-buffer": "^1.0.3",
+    "is-stream": "^2.0.1",
     "is-string": "^1.0.7",
     "is-symbol": "^1.0.4",
     "is-typed-array": "^1.1.13",
@@ -160,30 +221,80 @@
     "is-weakset": "^2.0.2",
     "isarray": "^2.0.5",
     "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.2",
+    "istanbul-lib-instrument": "^6.0.2",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-lib-source-maps": "^4.0.1",
+    "istanbul-reports": "^3.1.7",
     "iterator.prototype": "^1.1.2",
+    "jest": "^29.7.0",
+    "jest-changed-files": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-diff": "^29.7.0",
+    "jest-docblock": "^29.7.0",
+    "jest-each": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-get-type": "^29.6.3",
+    "jest-haste-map": "^29.7.0",
+    "jest-leak-detector": "^29.7.0",
+    "jest-matcher-utils": "^29.7.0",
+    "jest-message-util": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "jest-pnp-resolver": "^1.2.3",
+    "jest-regex-util": "^29.6.3",
+    "jest-resolve": "^29.7.0",
+    "jest-resolve-dependencies": "^29.7.0",
+    "jest-runner": "^29.7.0",
+    "jest-runtime": "^29.7.0",
+    "jest-snapshot": "^29.7.0",
+    "jest-util": "^29.7.0",
+    "jest-validate": "^29.7.0",
+    "jest-watcher": "^29.7.0",
+    "jest-worker": "^29.7.0",
     "js-tokens": "^4.0.0",
     "js-yaml": "^4.1.0",
+    "jsesc": "^2.5.2",
     "json-buffer": "^3.0.1",
+    "json-parse-even-better-errors": "^2.3.1",
     "json-schema": "^0.4.0",
     "json-schema-traverse": "^0.4.1",
     "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json5": "^1.0.2",
+    "json5": "^2.2.3",
+    "jsonc-parser": "^3.2.1",
     "jsx-ast-utils": "^3.3.5",
     "keyv": "^4.5.4",
+    "kleur": "^3.0.3",
     "language-subtag-registry": "^0.3.22",
     "language-tags": "^1.0.9",
+    "leven": "^3.1.0",
     "levn": "^0.4.1",
+    "lines-and-columns": "^1.2.4",
+    "local-pkg": "^0.5.0",
     "locate-path": "^6.0.0",
     "lodash.merge": "^4.6.2",
     "loose-envify": "^1.4.0",
-    "lru-cache": "^6.0.0",
+    "loupe": "^2.3.7",
+    "lru-cache": "^5.1.1",
+    "magic-string": "^0.30.8",
+    "make-dir": "^4.0.0",
+    "makeerror": "^1.0.12",
+    "merge-stream": "^2.0.0",
     "merge2": "^1.4.1",
     "micromatch": "^4.0.5",
+    "mimic-fn": "^2.1.0",
     "minimatch": "^3.1.2",
     "minimist": "^1.2.8",
+    "mlly": "^1.6.1",
     "ms": "^2.1.2",
+    "nanoid": "^3.3.7",
     "natural-compare": "^1.4.0",
     "natural-compare-lite": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-releases": "^2.0.14",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.13.1",
     "object-keys": "^1.1.1",
@@ -194,31 +305,48 @@
     "object.hasown": "^1.1.3",
     "object.values": "^1.1.7",
     "once": "^1.4.0",
+    "onetime": "^5.1.2",
     "optionator": "^0.9.3",
     "p-limit": "^3.1.0",
     "p-locate": "^5.0.0",
+    "p-try": "^2.2.0",
     "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
     "path-exists": "^4.0.0",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
     "path-type": "^4.0.0",
+    "pathe": "^1.1.2",
+    "pathval": "^1.1.1",
+    "picocolors": "^1.0.0",
     "picomatch": "^2.3.1",
+    "pirates": "^4.0.6",
+    "pkg-dir": "^4.2.0",
+    "pkg-types": "^1.0.3",
     "possible-typed-array-names": "^1.0.0",
+    "postcss": "^8.4.35",
     "prelude-ls": "^1.2.1",
     "prettier": "^3.2.5",
     "prettier-linter-helpers": "^1.0.0",
+    "pretty-format": "^29.7.0",
+    "prompts": "^2.4.2",
     "prop-types": "^15.8.1",
     "punycode": "^2.3.1",
+    "pure-rand": "^6.0.4",
     "queue-microtask": "^1.2.3",
-    "react-is": "^16.13.1",
+    "react-is": "^18.2.0",
     "reflect.getprototypeof": "^1.0.5",
     "regenerator-runtime": "^0.14.1",
     "regexp.prototype.flags": "^1.5.2",
+    "require-directory": "^2.1.1",
     "resolve": "^1.22.8",
+    "resolve-cwd": "^3.0.0",
     "resolve-from": "^4.0.0",
+    "resolve.exports": "^2.0.2",
     "reusify": "^1.0.4",
     "rimraf": "^3.0.2",
+    "rollup": "^4.12.0",
     "run-parallel": "^1.2.0",
     "safe-array-concat": "^1.1.0",
     "safe-regex-test": "^1.0.3",
@@ -228,42 +356,75 @@
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "side-channel": "^1.0.6",
+    "siginfo": "^2.0.0",
+    "signal-exit": "^3.0.7",
+    "sisteransi": "^1.0.5",
     "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-js": "^1.0.2",
+    "source-map-support": "^0.5.13",
+    "sprintf-js": "^1.0.3",
+    "stack-utils": "^2.0.6",
+    "stackback": "^0.0.2",
+    "std-env": "^3.7.0",
+    "string-length": "^4.0.2",
+    "string-width": "^4.2.3",
     "string.prototype.matchall": "^4.0.10",
     "string.prototype.trim": "^1.2.8",
     "string.prototype.trimend": "^1.0.7",
     "string.prototype.trimstart": "^1.0.7",
     "strip-ansi": "^6.0.1",
-    "strip-bom": "^3.0.0",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
     "strip-json-comments": "^3.1.1",
+    "strip-literal": "^2.0.0",
     "supports-color": "^7.2.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "synckit": "^0.8.8",
+    "test-exclude": "^6.0.0",
     "text-table": "^0.2.0",
+    "tinybench": "^2.6.0",
+    "tinypool": "^0.8.2",
+    "tinyspy": "^2.2.1",
+    "tmpl": "^1.0.5",
+    "to-fast-properties": "^2.0.0",
     "to-regex-range": "^5.0.1",
     "ts-api-utils": "^1.2.1",
     "tsconfig-paths": "^3.15.0",
     "tslib": "^2.6.2",
     "tsutils": "^3.21.0",
     "type-check": "^0.4.0",
-    "type-fest": "^0.20.2",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.21.3",
     "typed-array-buffer": "^1.0.2",
     "typed-array-byte-length": "^1.0.1",
     "typed-array-byte-offset": "^1.0.2",
     "typed-array-length": "^1.0.5",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^7.1.0",
+    "ufo": "^1.4.0",
     "unbox-primitive": "^1.0.2",
+    "undici-types": "^5.26.5",
+    "update-browserslist-db": "^1.0.13",
     "uri-js": "^4.4.1",
+    "v8-to-istanbul": "^9.2.0",
+    "vite": "^5.1.4",
+    "vite-node": "^1.3.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vitest": "^1.3.1",
+    "walker": "^1.0.8",
     "which": "^2.0.2",
     "which-boxed-primitive": "^1.0.2",
     "which-builtin-type": "^1.1.3",
     "which-collection": "^1.0.1",
     "which-typed-array": "^1.1.14",
+    "why-is-node-running": "^2.2.2",
+    "wrap-ansi": "^7.0.0",
     "wrappy": "^1.0.2",
-    "yallist": "^4.0.0",
+    "write-file-atomic": "^4.0.2",
+    "y18n": "^5.0.8",
+    "yallist": "^3.1.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
     "yocto-queue": "^0.1.0"
-  },
-  "devDependencies": {},
-  "license": "ISC"
+  }
 }
