--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,11 +3,11 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
+    target-branch: "dev" # Ensures 'main' only receives updates from 'dev' and that after, 'main' will also get a new version for npm.
     directory: "/"
     open-pull-requests-limit: 5
     schedule:
-      interval: "weekly"
-      day: "sunday"
+      interval: "daily"
       time: '10:00'
       timezone: 'Europe/Berlin'
     assignees: ['born3am'] # Assign PRs to a specific user or team
