--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,7 @@ updates:
     directory: '/' # Look for package.json in the root directory
     open-pull-requests-limit: 5
     schedule:
-      interval: 'weekly'
-      day: 'tuesday'
+      interval: 'daily'
       time: '10:00'
       timezone: 'Europe/Berlin'
     assignees: ['born3am']
