ci: Update GitHub Actions and Dependabot Configurations, Remove Redundant Workflows (#35)
* chore(deps): update dependabot configuration splitting dev and main (#28)

* chore(deps): update dependabot configuration splitting dev and main

* chore(deps): change dependabot update schedule from weekly to daily

* chore(deps): fix indentation in dependabot configuration for versioning strategy

* ci: Improve CI/CD and dependabot (#32)

* chore(deps): refine dependabot configuration for security updates

* chore: update node CI workflows and rename it

* chore: remove unused test script

* chore(deps): revert config assuming dev will be set as default branch (#34)

* chore(deps): fix formatting in dependabot configuration

* chore(deps): specify package ecosystem for dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,7 @@
 version: 2
 updates:
-  # Version updates for `dev` branch
-  - package-ecosystem: 'npm'
-    target-branch: 'dev' # Ensures 'main' only receives updates from 'dev', so 'main' reflects all dependency updates and the new package version when merged (useful for npm)
-    directory: '/' # Look for package.json in the root directory
+  - directory: '/' # Look for package.json in the root directory
+    package-ecosystem: 'npm'
     open-pull-requests-limit: 5
     schedule:
       interval: 'daily'
@@ -22,23 +20,11 @@ updates:
     ignore:
       - dependency-name: '*' # Ignore all pre-release versions for stability
         versions:
-        - 'alpha' # Unstable early-stage development versions
-        - 'beta' # Pre-production versions
-        - 'canary' # Frequently updated testing versions
-        - 'dev' # Developer-only versions
-        - 'experimental' # Experimental versions with high instability
-        - 'legacy' # Deprecated versions
-        - 'next' # Future versions not finalized
-        - 'nightly' # Daily unstable builds
-
-  # Security updates for `main` branch
-  - package-ecosystem: 'npm'
-    directory: '/' # Look for package.json in the root directory
-    schedule:
-      interval: 'daily'
-      time: '11:00'
-      timezone: 'Europe/Berlin'
-    labels:
-      - 'security' # Add a "security" label to these PRs
-    allow:
-      - dependency-type: 'direct' # Prioritize direct dependencies for security updates
+          - 'alpha' # Unstable early-stage development versions
+          - 'beta' # Pre-production versions
+          - 'canary' # Frequently updated testing versions
+          - 'dev' # Developer-only versions
+          - 'experimental' # Experimental versions with high instability
+          - 'legacy' # Deprecated versions
+          - 'next' # Future versions not finalized
+          - 'nightly' # Daily unstable builds
