--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,8 @@ updates:
     package-ecosystem: 'npm'
     open-pull-requests-limit: 5
     schedule:
-      interval: 'daily'
+      interval: 'monthly'
+      day-of-month: 10
       time: '10:00'
       timezone: 'Europe/Berlin'
     assignees: ['born3am']
