--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,31 +1,35 @@
+# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
+
 version: 2
 updates:
-  - directory: '/' # Look for package.json in the root directory
-    package-ecosystem: 'npm'
+  - package-ecosystem: 'npm'
+    directory: '/'
     open-pull-requests-limit: 5
     schedule:
       interval: 'monthly'
-      day-of-month: 10
+      day: 'tuesday'
       time: '10:00'
       timezone: 'Europe/Berlin'
-    assignees: ['born3am']
+    assignees: ['born3am'] # Assign PRs to a specific user or team
     commit-message:
       prefix: 'chore' # PR title prefix
-      include: 'scope' # Include scope in PR title
+      include: 'scope'
     groups:
-      minor-updates: # Group all patch updates together
-        applies-to: 'version-updates' # version-updates or security-updates
-        update-types:
+      minor-and-patch-updates:
+        patterns:
+          - '*' # Apply to all dependencies
+        update-types: # Update types to consider
           - 'patch'
-    versioning-strategy: increase-if-necessary # Only bump version if required for compatibility or security
+          - 'minor'
+    versioning-strategy: increase-if-necessary
     ignore:
-      - dependency-name: '*' # Ignore all pre-release versions for stability
+      - dependency-name: '*'
         versions:
-          - 'alpha' # Unstable early-stage development versions
-          - 'beta' # Pre-production versions
-          - 'canary' # Frequently updated testing versions
-          - 'dev' # Developer-only versions
-          - 'experimental' # Experimental versions with high instability
-          - 'legacy' # Deprecated versions
-          - 'next' # Future versions not finalized
-          - 'nightly' # Daily unstable builds
+          - 'alpha'
+          - 'beta'
+          - 'canary'
+          - 'dev'
+          - 'experimental'
+          - 'legacy'
+          - 'next'
+          - 'nightly'
